--- a/src/cssstyles/Common.css
+++ b/src/cssstyles/Common.css
@@ -92,8 +92,14 @@ text-transform: uppercase;
 
 .errorText {
   color: red;
-  font-size: 1.5em;
+  font-size: 1em;
   text-align: left;
+}
+.loginErrorText {
+  color: red;
+  font-size: 1em;
+  text-align: left;
+  margin-left: 0.9em;
 }
 .headerColor {
   color:white;
@@ -183,4 +189,7 @@ td.linebreak p {
   width:12.2em;
   height:2.3em;
   border:none;
+}
+.loginForm {
+ float:center;
 }
